lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.error
Lander:9: error: not found: value y
		if(pos==y(sol(i))&&plat == 0){
                        ^Lander:13: error: not found: value y
		else if(pos==y(sol(i))&&plat == 1){
                             ^Lander:16: error: not found: value y
		else if(pos!=y(sol(i))&&plat == 1){
                             ^Lander:20: error: not found: value y
			pos = y(sol(i))
                              ^Lander:8: error: type mismatch;
 found   : Unit
 required: lessons.lander.universe.Segment
	for(i<-0 to getSol.length-1){
             ^